syntax = "proto3";

option java_multiple_files = true;
option java_package = "unillence.bookstoreims.bookstore";
option java_outer_classname = "BookProto";

package bookstore;

// The Book message
message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

// The service definition
service BookService {
  rpc AddBook(Book) returns (Book);
  rpc GetBook(GetBookRequest) returns (Book);
  rpc UpdateBook(Book) returns (Book);
  rpc DeleteBook(GetBookRequest) returns (Book);
  // Add more methods as needed
}

message GetBookRequest {
  string id = 1;
}
